tests/NormalTests/paczka1/small_fuzzy/66215428.err
Error in line 3: 5ZngEjapy7d A244 81,3
Error in line 1: tRagZ S381 4,8
Error in line 7: tRagZ A244 24,5
